--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/public/index.html
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/public/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" style="height:100%">
+<html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -25,11 +25,9 @@
     -->
     <title>StackoverflowGuide</title>
   </head>
-  <body style="height:100%">
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root" style="height:100%"></div>
+  <body style="height: 100%">
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <div id="root" style="height: 100%"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
